== Groups by itthinx - changelog.txt

2025-12-30 - version 3.10.0
* Update - WordPress 6.9 compatible.
* Update - WooCommerce 10.4 compatible.

2025-12-17 - version 3.9.0
* Update - WordPress 6.9 compatible.
* Update - WooCommerce 10.4 compatible.
* Dev - Avoid handling non-objects when processing term counts in the get_terms filter.
* Dev - Added translators comment.
* Dev - Validation hints for PluginCheck.Security.DirectDB.UnescapedDBParameter.
* Dev - Validation hints for WordPress.DB.DirectDatabaseQuery.DirectQuery.
* Dev - Validation hints for WordPress.DB.DirectDatabaseQuery.NoCaching.
* Dev - Validation hints for WordPress.DB.DirectDatabaseQuery.SchemaChange.
* Dev - Validation hints for WordPress.WP.AlternativeFunctions.rand_rand.

2025-10-31 - version 3.8.0
* Update - WordPress 6.8 compatible.
* Update - Requires at least WordPress 6.7.
* Update - WooCommerce 10.3 compatible.
* Update - Requires at least WooCommerce 10.0.
* Dev - Revised block script dependencies.
* Dev - Revised the join and leave shortcode processing logic.
* Dev - Added the groups_join_submit_max_time_delta filter.
* Dev - Added the groups_leave_submit_max_time_delta filter.
* Dev - Improved several instances of translatable strings.
* Update - Updated the translation template.
* Update - Updated the included translations.
* Update - Fixed instances of formal translations in the informal German translation set.
* Dev - Replaced use of DOING_AJAX with wp_doing_ajax().
* Dev - Replaced use of DOING_CRON with wp_doing_cron().
* Dev - Added validation hint to ignore requireOnce.fileNotFound due to false positives.
* Dev - Added validation hint to ignore include.fileNotFound due to false positives.
* Dev - Added validation hint to ignore includeOnce.fileNotFound due to false positives.

2025-09-08 - version 3.7.0
* Update - WordPress 6.8 compatible.
* Update - Requires at least WordPress 6.5.
* Update - WooCommerce 10.2 compatible.
* Update - Requires at least WooCommerce 8.5.