@@ -3,6 +3,10 @@
 2025-12-30 - version 3.10.0
 * Update - WordPress 6.9 compatible.
 * Update - WooCommerce 10.4 compatible.
+* Fix - Do not process mofile for unrelated domain in our controller's load_textdomain_mofile filter.
+* Dev - Performance improvement to avoid redundant mofile determination when already processed.
+* Fix - Solves infinite recursion issues with execution flows originating calls to our controller's load_textdomain_mofile filter for unrelated domains.
+* Update - Updated the translation template.
 
 2025-12-17 - version 3.9.0
 * Update - WordPress 6.9 compatible.
